--- a/projectsblog-project/projectsblog/projectsblog/templates/base.html
+++ b/projectsblog-project/projectsblog/projectsblog/templates/base.html
@@ -63,9 +63,17 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
-                        <a class="nav-link" href="">Sign Up</a>
-                        <a class="nav-link" href="">Login</a>
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
+                        <form id="logout" method="POST" action="{% url 'logout' %}" >
+                            {% csrf_token %}
+                            <input type="hidden"/>
+                        </form>
                         <!--<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+                        {% else %}
+                        <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
