--- a/projectsblog-project/projectsblog/templates/base.html
+++ b/projectsblog-project/projectsblog/templates/base.html
@@ -1,6 +1,7 @@
 
 <!doctype html>
 <html lang="en">
+
 <head>
     {% load static %}
     <meta charset="utf-8">
@@ -11,7 +12,7 @@
     <title>Krzysztof Mićko</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
-
+    <link href="{% static 'open-iconic-master/font/css/open-iconic-bootstrap.css' %}" rel="stylesheet"/>
 
 
     <!-- Bootstrap core CSS -->
@@ -54,7 +55,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <div class="container-fluid">
-                <a class="navbar-brand" href="">
+                <a class="navbar-brand" href="{% url 'home' %}">
                     <img src="{% static 'logo.png' %}" height="30" class="d-inline-block align-top">
                     Projects
                 </a>
@@ -64,6 +65,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto">
                         {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'create' %}">
+                            <span class="oi oi-plus">
+                            </span>
+                        </a>
                         <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
                         <form id="logout" method="POST" action="{% url 'logout' %}" >
                             {% csrf_token %}
